[build-system]
requires = ["setuptools>=61.2",
            "setuptools_scm[toml]>=3.4.3",
            "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "jwst_novt"
description = "JWST NIRSpec Observation Visualization Tool"
authors = [{name = "STScI", email = "help@stsci.edu"}]
license = {file = "LICENSE.rst"}
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "astropy>=5.2.2",
    "jwst_gtvt>=1.0.0",
    "numpy>=1.24.3",
    "pandas>=2.0.1",
    "pysiaf>=0.19.1",
    "regions>=0.7",
    "requests>=2.28"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics"
]
readme = "README.rst"

[project.optional-dependencies]
interact = [
    "bqplot>=0.12.37",
    "ipykernel>=6.19.4",
    "ipyvuetify>=1.7.0",
    "ipywidgets>=8.0.4",
    "jdaviz>=3.4.0",
    "pyyaml>=5.4.1",
    "traitlets>=5.0.5",
    "voila>=0.4"
]
test = [
    "ruff",
    "pytest",
    "pytest-coverage",
    "pytest-mock"
]
docs = [
    "graphviz",
    "stsci_rtd_theme",
    "sphinx-astropy",
    "sphinx_rtd_theme",
    "sphinx-automodapi",
    "sphinx-issues",
    "tomli"
]

[project.scripts]
novt = "jwst_novt.run_notebook:_main"
serve_novt = "jwst_novt.serve_novt:main"

[project.urls]
Homepage = "https://github.com/spacetelescope/jwst_novt"

[tool.setuptools.package-data]
"*" = ["*.fits, *.csv"]
"jwst_novt" = ["data/*"]
"jwst_novt.tests" = ["data/*"]

[tool.setuptools_scm]
write_to = "jwst_novt/version.py"

[tool.pytest.ini_options]
minversion = "2.2"
testpaths = [
    "jwst_novt/tests",
    "jwst_novt/interact/tests"
]
norecursedirs = [
    "build",
    "docs/_build"
]
astropy_header = "true"
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "-p no:warnings"


[tool.coverage.run]
source = ["jwst_novt",]
omit = [
    "jwst_novt/tests/*",
    "jwst_novt/version*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main(.*):",
    "pragma: py{ignore_python_version}",
]
omit = [
    "jwst_novt/tests/*",
    "jwst_novt/interact/tests/*",
    "jwst_novt/version*"
]

[tool.ruff]
line-length = 88
select = ["ALL"]
ignore =[
    "ANN", "S", "BLE", "SLF", "PERF",
    "PLR0913", "SIM108", "D100", "D104", "COM812"
]
exclude = [
    "version.py",
    "conf.py"
]

[tool.ruff.per-file-ignores]
"*test*.py" = ["D101", "D102", "D103"]
"test_display.py" = ["T201"]
"__init__.py" = ["F403"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.flake8-unused-arguments]
ignore-variadic-names = true
